# ai_interview_caller

./: .gitignore  README.md  index.html  main.py  pyproject.toml
app/api/: dependencies.py
app/api/endpoints/: candidate.py  interview.py  jd.py  webhooks.py
app/core/: config.py  database.py  security.py
app/models/: interview_models.py
app/services/: llm_service.py  resume_parser.py  telephony_service.py
postman/: My_Collection.postman_collection.json  data.json  env.postman_environment.json
